src/test/deca/context/valid/oracle/return_class_type.deca
class A{
}

class B{
    A f(){
        return new A();
    }
}