src/test/deca/context/invalid/oracle/cast_compatible_other.deca
class Animal{
    int x, y;
}

class Car{
    int speed;
}

{
    Car car = new Car();
    (Animal) (car);
}